# inhouse-tool-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
api/: __init__.py
api/routes/: dashboard.py  monitoring.py  sensors.py  slices.py  storage.py  wav_files.py
core/: config.py  database.py  gcs.py
services/: audio_slicer.py
