[project]
name = "backend"
version = "0.1.0"
description = "Signal Craft Inhouse Tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi==0.115.0",
    "google-cloud-storage==2.18.2",
    "motor==3.6.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.30.6",
]
